[tool.poetry]
name = "postman-environment-runner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "postman_environment_runner"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
postmanenv = 'postman_environment_runner.main:entrypoint'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
